// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentRefinements - Connected expect to render a list of current refinements 1`] = `
<div
  className="ais-CurrentRefinements"
>
  <ul
    className="ais-CurrentRefinements-list"
  >
    <li
      className="ais-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="ais-CurrentRefinements-category"
      >
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
    <li
      className="ais-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          ✕
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements - Connected expect to render a list of current refinements with custom translations 1`] = `
<div
  className="ais-CurrentRefinements"
>
  <ul
    className="ais-CurrentRefinements-list"
  >
    <li
      className="ais-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="ais-CurrentRefinements-category"
      >
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
    </li>
    <li
      className="ais-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          DELETE
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements expect to render a list of current refinements 1`] = `
<div
  className="ais-CurrentRefinements"
>
  <ul
    className="ais-CurrentRefinements-list"
  >
    <li
      className="ais-CurrentRefinements-item"
      key="color: Red"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        color: Red
      </span>
      <span
        className="ais-CurrentRefinements-category"
      >
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
    </li>
    <li
      className="ais-CurrentRefinements-item"
      key="category:"
    >
      <span
        className="ais-CurrentRefinements-label"
      >
        category:
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPhone"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPhone
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
      <span
        className="ais-CurrentRefinements-category"
        key="iPad"
      >
        <span
          className="ais-CurrentRefinements-categoryLabel"
        >
          iPad
        </span>
        <button
          className="ais-CurrentRefinements-delete"
          onClick={[Function]}
        >
          clearFilter
        </button>
      </span>
    </li>
  </ul>
</div>
`;

exports[`CurrentRefinements expect to render a list with a custom className 1`] = `
<div
  className="ais-CurrentRefinements MyCustomCurrentRefinements"
>
  <ul
    className="ais-CurrentRefinements-list"
  />
</div>
`;

exports[`CurrentRefinements expect to render a list without refinements 1`] = `
<div
  className="ais-CurrentRefinements ais-CurrentRefinements--noRefinement"
>
  <ul
    className="ais-CurrentRefinements-list ais-CurrentRefinements-list--noRefinement"
  />
</div>
`;
